# todoist-schedule-opt

./: .env.local  .gitignore  CLAUDE.md  README.md  crontab.example  optimizer.py  pyproject.toml  reporter.py  scheduler.py  slot_generator.py  task_parser.py  task_trigger.py  todoist_client.py
.kiro/specs/task-trigger/: design.md  requirements.md  research.md  spec.json
.kiro/specs/todoist-scheduler/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
aidlc-docs/: aidlc-state.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md
aidlc-docs/inception/plans/: execution-plan.md
aidlc-docs/inception/requirements/: requirement-verification-questions.md  requirements.md
tests/: test_optimizer.py  test_reporter.py  test_slot_generator.py  test_task_parser.py  test_task_trigger.py
